# curius-tui

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: nodes.py
tests/: test_buffer.py  test_data_structures.py  test_nodes.py
