[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curius"
version = "0.1.0"
description = "A Textual-powered terminal UI for navigating the Curius social knowledge graph."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oliver Hayman" }]
requires-python = ">=3.10"
keywords = ["curius", "tui", "textual", "knowledge-graph", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50",
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "flake8>=7.0",
]

[project.urls]
Homepage = "https://github.com/oh54321/curius-tui"
Repository = "https://github.com/oh54321/curius-tui"
Issues = "https://github.com/oh54321/curius-tui/issues"

[project.scripts]
curius = "scripts.run_cli:main"

[tool.setuptools.package-data]
src = ["**/*.css"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
